@@ -10,6 +10,7 @@ Legend:
 
 next version - not released yet
 ===============================
++ Accept loading more than one subtitle file at a time using drag-and-drop
 * Text subtitles: Faster subtitle parsing (up to 4 times faster for SSA/ASS subtitles)
 * Ticket #4428, Improve the clarity of the error message when opening a subtitle file fails
 
